# ba7816bf8f01ca

./: .dockerignore  .env.example  .env.grafana.example  .env.neo4j.example  .gitattributes  .gitignore  README.md  TUNNEL_SETUP.md  docker-compose.yaml  requirements.txt  run_api_tests.ps1  run_seed.sh  run_webhook_tests.ps1  seed_incidents.py  starter.ps1
.mcp-debug-tools/: config.json
Containers/: docker-compose.yml
ai_service/: .env.example  .gitignore  Dockerfile  README.md  agent.py  llm.py  requirements.txt
api/: .env.example  Dockerfile  README.md  alembic.ini  config.py  database.py  dependencies.py  exceptions.py  main.py  requirements.txt
backend/: README.md  alchemy_oop.py  create_tables.py  crud.py
cloudflared/: README.md  config.yml  credentials.json
database/: README.md
datasets/: README.md  dataset_v0.1.rar  sentinelai_dataset_table.json  sentinelai_dataset_v0.1.csv  sentinelai_dataset_v0.1.json  sentinelai_dataset_v0.2.csv  sentinelai_dataset_v0.2.json  sentinelai_dataset_v0.3.csv  sentinelai_dataset_v0.3.json
email_webhooks/: email_service.db  main.py  requirements.txt
filter/: .env.example  .gitignore  Dockerfile  __init__.py  config.py  main.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  train.ipynb
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf
knowledge-graph/mcp-server/: Dockerfile  README.md  metrics.py  pyproject.toml  requirements.txt  server.py
knowledge-graph/mcp-server/sentinelai_kg/: __init__.py  concerns.py  config.py  data.py  formatting.py  tools.py
(+502 files in other folders)
