[project]
name = "sentinelai-kg-mcp"
version = "1.0.0"
description = "MCP server for the SentinelAI evidence-based mental health knowledge graph"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
